--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -1,6 +1,6 @@
 article.page {
-    float: left;
-    width: 75%;
+    left: 20%
+    width: 60%;
 }
 /* Copyright comment */
 @import "minimal-mistakes/copyright";
