--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -1,6 +1,6 @@
 article.page {
-    position: absolute;
-    left: 30%;
+    float: left;
+    margin-left: 20%；
     width: 60%;
 }
 /* Copyright comment */
