--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -1,4 +1,8 @@
-
+article.page {
+    float: left;
+    margin-left: 20%;
+    width: 80%;
+}
 /* Copyright comment */
 @import "minimal-mistakes/copyright";
 
